--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -40,7 +40,7 @@ Language Model},
   bibtex_show={true},
   title={A Chain-of-Thought AI Reasoning Framework for Burn Diagnosis},
   author={Rahman, Md Masudur and Masry, Mohamed El and and Gordillo, Gayle and Wachs,  Juan P.},
-  booktitle={In Military Health System Research Symposium},
+  booktitle={Military Health System Research Symposium},
   abbr={MHSRS-Abstract},
   preview={mhsrs_2025_sample_cot.png},
   year={2025},
@@ -64,7 +64,7 @@ Language Model},
   bibtex_show={true},
   title={Advancing Burn Depth Assessment through Ultrasound Imaging with Vision Transformers},
   author={Rahman, Md Masudur and Masry, Mohamed El and Gnyawali, Surya and Gordillo, Gayle and Xue, Yexiang and Wachs,  Juan P.},
-  booktitle={In Military Health System Research Symposium},
+  booktitle={Military Health System Research Symposium},
   abbr={MHSRS-Abstract},
   preview={ambush_vit_overview.png},
   year={2024}
