--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -13,7 +13,7 @@
   preview={burnaid_toc.png},
   selected={true}
 }
-@article{rahman2025knowledge,
+@inproceedings{rahman2025knowledge,
   bibtex_show={true},
   title={Knowledge-Driven Hypothesis Generation for Burn Diagnosis from Ultrasound with Vision-
 Language Model},
@@ -39,12 +39,21 @@ Language Model},
 @inproceedings{rahman2025cot,
   bibtex_show={true},
   title={A Chain-of-Thought AI Reasoning Framework for Burn Diagnosis},
-  author={Rahman, Md Masudur and Masry, Mohamed El and and Gordillo, Gayle and Wachs,  Juan P.},
+  author={Rahman, Md Masudur and Masry, Mohamed El and Gordillo, Gayle and Wachs,  Juan P.},
   booktitle={Military Health System Research Symposium},
   abbr={MHSRS-Abstract},
   preview={mhsrs_2025_sample_cot.png},
   year={2025},
   selected={true}
+}
+@inproceedings{zhuo2025scalable,
+  bibtex_show={true},
+  title={A Scalable AI Copilot for High Stake Medical Scenarios},
+  author={Zhuo, Yupeng and Zhang, Eddie and Pachpande, Aditya and Yu, Xiangchen and Iyengar, Krish and Turlapati, Nihar and Chen, Xiyue and Lam, Trung Duc and Kirkpatrick, Andrew W. and Couperus, Kyle and Colombo, Christopher and McKee, Jessica and Rahman, Md Masudur and Wachs, Juan P.},
+  booktitle={Annual Conference on Medical Image Understanding and Analysis},
+  abbr={MIUA-Abstract},
+  preview={ai_copilot.png},
+  year={2025}
 }
 @inproceedings{rahman2024natural,
   bibtex_show={true},
