--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -3,6 +3,55 @@
 
 @string{aps = {American Physical Society,}}
 
+@inproceedings{rahman2025robust,
+  title        = {Robust Policy Gradient Optimization through Action Parameter Perturbation in Reinforcement Learning},
+  author       = {\textbf{Rahman}, \textbf{Md Masudur} and Wachs, Juan P. and Xue, Yexiang},
+  booktitle    = {Proceedings of the Aligning Reinforcement Learning Experimentalists and Theorists Workshop (ARLET@NeurIPS 2025) at the Thirty-Ninth Annual Conference on Neural Information Processing Systems (NeurIPS 2025)},
+  year         = {2025},
+  note         = {Peer-reviewed, non-archival workshop paper},
+  bibtex_show={true},
+  abbr={NeurIPS Workshop},
+  selected={true}
+}
+
+@inproceedings{rahman2025intent,
+  title        = {Intent-Based Reward Inference for Value-Aligned Reinforcement Learning},
+  author       = {\textbf{Rahman}, \textbf{Md Masudur} and Wachs, Juan P.},
+  booktitle    = {Proceedings of the Aligning Reinforcement Learning Experimentalists and Theorists Workshop (ARLET@NeurIPS 2025) at the Thirty-Ninth Annual Conference on Neural Information Processing Systems (NeurIPS 2025)},
+  year         = {2025},
+  note         = {Peer-reviewed, non-archival workshop paper},
+  bibtex_show={true},
+  abbr={NeurIPS Workshop},
+  selected={true}
+}
+
+@inproceedings{rahman2025improvisational,
+  title        = {Improvisational Reasoning with Vision-Language Models for Grounded Procedural Planning},
+  author       = {\textbf{Rahman}, \textbf{Md Masudur} and Zhuo, Yupeng and Wachs, Juan P.},
+  booktitle    = {Proceedings of the Thirty-Ninth Annual Conference on Neural Information Processing Systems Workshops (NeurIPS 2025): 
+                  Multimodal Algorithmic Reasoning Workshop (MAR@NeurIPS 2025), 
+                  GenAI for Health: Potential, Trust, and Policy Compliance (GenAI4Health@NeurIPS 2025), 
+                  Embodied World Models for Decision Making (EWM@NeurIPS 2025)},
+  year         = {2025},
+  note         = {Peer-reviewed, non-archival workshop paper},
+  bibtex_show={true},
+  abbr={NeurIPS Workshop},
+  selected={true}
+}
+
+@inproceedings{rahman2025burn,
+  title        = {Vision-Language Reasoning for Burn Depth Assessment with Structured Diagnostic Hypotheses},
+  author       = {\textbf{Rahman}, \textbf{Md Masudur} and El Masry, Mohamed and Nuutila, Kristo and Gordillo, Gayle and Wachs, Juan P.},
+  booktitle    = {Proceedings of the Thirty-Ninth Annual Conference on Neural Information Processing Systems Workshops (NeurIPS 2025): 
+                  GenAI for Health: Potential, Trust, and Policy Compliance (GenAI4Health@NeurIPS 2025), 
+                  Embodied World Models for Decision Making (EWM@NeurIPS 2025)},
+  year         = {2025},
+  note         = {Peer-reviewed, non-archival workshop paper},
+  bibtex_show={true},
+  abbr={NeurIPS Workshop},
+  selected={true}
+}
+
 @article{rahman2025burnaid,
   bibtex_show={true},
   author  = {Rahman, Md Masudur and Masry, Mohamed El and Gnyawali, Surya and Xue, Yexiang and Gordillo, Gayle and Wachs,  Juan P.},
@@ -17,7 +66,7 @@
   bibtex_show={true},
   title={Knowledge-Driven Hypothesis Generation for Burn Diagnosis from Ultrasound with Vision-
 Language Model},
-  author={Rahman, Md Masudur and Masry, Mohamed El and and Gordillo, Gayle and Wachs,  Juan P.},
+  author={Rahman, Md Masudur and Masry, Mohamed El and Gordillo, Gayle and Wachs,  Juan P.},
   booktitle={Annual Conference on Medical Image Understanding and Analysis},
   abbr={MIUA},
   preview={burn_ultrasound_ambush_miua2025.png},
