Add new paper entry

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -3,6 +3,16 @@
 
 @string{aps = {American Physical Society,}}
 
+@inproceedings{rahman2026automated,
+  title        = {Automated Unified Reasoning with Vision-Language Models for Multi-modal Burn Assessment},
+  author       = {Rahman, Md Masudur and Masry, Mohamed El and Gordillo, Gayle and Wachs,  Juan P.},
+  booktitle    = {Proceedings of the AAAI Conference on Artificial Intelligence (IAAI)},
+  year         = {2026},
+  note         = {Oral, Innovative Applications of Artificial Intelligence (IAAI-26), Acceptance rate: 15%},
+  bibtex_show={true},
+  abbr={AAAI-2026},
+  selected={true}
+}
 
 @inproceedings{rahman2025robust,
   title        = {Robust Policy Gradient Optimization through Action Parameter Perturbation in Reinforcement Learning},
