--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -6,7 +6,7 @@
 @inproceedings{rahman2026automated,
   title        = {Automated Unified Reasoning with Vision-Language Models for Multi-modal Burn Assessment},
   author       = {Rahman, Md Masudur and Masry, Mohamed El and Gordillo, Gayle and Wachs,  Juan P.},
-  booktitle    = {Proceedings of the AAAI Conference on Artificial Intelligence (IAAI)},
+  booktitle    = {Proceedings of the AAAI Conference on Artificial Intelligence (AAAI)},
   year         = {2026},
   note         = {Oral, Innovative Applications of Artificial Intelligence (IAAI-26), Acceptance rate: 15%},
   bibtex_show={true},
