Add preview image for IAAI-26 paper
Added preview image reference for the IAAI-26 paper.

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -11,6 +11,7 @@
   note         = {Oral, Innovative Applications of Artificial Intelligence (IAAI-26), Acceptance rate: 15%},
   bibtex_show={true},
   abbr={AAAI-2026},
+  preview={aura_overview.png},
   selected={true}
 }
 
