Add conference paper on burn depth diagnostics
Added a new entry for a conference paper on burn depth diagnostics using AI.

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -3,6 +3,18 @@
 
 @string{aps = {American Physical Society,}}
 
+@inproceedings{masry2025pstmburndepth,
+  author    = {Masry, Mohamed El and Rahman, Md Masudur and Gnyawali, Surya and Wachs,  Juan P. and Gordillo, Gayle},
+  title     = {Burn Depth Diagnostic System for Healthcare Using Artificial Intelligence},
+  booktitle = {Plastic Surgery The Meeting (PSTM) 2025},
+  year      = {2025},
+  month     = {October},
+  address   = {New Orleans, Louisiana, USA},
+  note      = {Oral presentation (abstract)},
+  organization = {American Society of Plastic Surgeons (ASPS)},
+  abbr={PSTM-2025}
+  }
+
 @inproceedings{rahman2026automated,
   title        = {Automated Unified Reasoning with Vision-Language Models for Multi-modal Burn Assessment},
   author       = {Rahman, Md Masudur and Masry, Mohamed El and Gordillo, Gayle and Wachs,  Juan P.},
@@ -71,6 +83,7 @@
   year    = {2025},
   doi     = {10.2196/68366},
   preview={burnaid_toc.png},
+  abbr={JMIR},
   selected={true}
 }
 @inproceedings{rahman2025knowledge,
