--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -116,7 +116,8 @@ Language Model},
   address   = {New Orleans, Louisiana, USA},
   note      = {Oral presentation (abstract)},
   organization = {American Society of Plastic Surgeons (ASPS)},
-  abbr={PSTM-2025}
+  abbr={PSTM-2025},
+  bibtex_show={true}
   }
 @inproceedings{zhuo2025scalable,
   bibtex_show={true},
