Add new article

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -3,6 +3,8 @@
 
 @string{aps = {American Physical Society,}}
 
+
+
 @inproceedings{rahman2026automated,
   title        = {Automated Unified Reasoning with Vision-Language Models for Multi-modal Burn Assessment},
   author       = {Rahman, Md Masudur and Masry, Mohamed El and Gordillo, Gayle and Wachs,  Juan P.},
@@ -14,7 +16,14 @@
   preview={aura_overview.png},
   selected={true}
 }
-
+@article{rahman2025ambushai,
+author="Rahman*, Md Masudur and Masry*, Mohamed El and Gnyawali, Surya C and Smeenge, Thomas  and Xue, Yexiang and C. Hartman, Brett and Spera, Leigh and Wachs, Juan P and Gordillo, Gayle",
+title="Automated Non-Invasive Burn Diagnostic System for Healthcare using Artificial Intelligence: AMBUSH-AI",
+journal="Annals of Surgery (Minor Revision)",
+abbr={Annals of Surgery},
+year="2025",
+selected={true}
+}
 @inproceedings{rahman2025robust,
   title        = {Robust Policy Gradient Optimization through Action Parameter Perturbation in Reinforcement Learning},
   author       = {Rahman, Md Masudur and Wachs, Juan P. and Xue, Yexiang},
