--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -21,7 +21,7 @@ author={Rahman, Md Masudur and Masry, Mohamed El and Gnyawali, Surya C and Smeen
 title={Automated Non-Invasive Burn Diagnostic System for Healthcare using Artificial Intelligence: AMBUSH-AI},
 journal={Annals of Surgery (Minor Revision)},
 abbr={Annals of Surgery},
-year={2025",
+year={2025},
 selected={true}
 }
 @inproceedings{rahman2025robust,
