--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -19,9 +19,10 @@
 @article{rahman2025ambushai,
   author={Rahman*, Md Masudur and Masry*, Mohamed El and Gnyawali, Surya C and Smeenge, Thomas  and Xue, Yexiang and C. Hartman, Brett and Spera, Leigh and Wachs, Juan P and Gordillo, Gayle},
   title={Automated Non-Invasive Burn Diagnostic System for Healthcare using Artificial Intelligence: AMBUSH-AI},
-  journal={Annals of Surgery (Minor Revision)},
+  journal={Annals of Surgery, under minor revision},
   abbr={Annals of Surgery},
   year={2025},
+  note = {Impact Factor = 6.4},
   selected={true}
 }
 @inproceedings{rahman2025robust,
