Add PDF link for AURA IAAI-26 paper
Added PDF link for AURA presentation in bibliography.

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -14,6 +14,7 @@
   bibtex_show={true},
   abbr={AAAI-2026},
   preview={aura_overview.png},
+  pdf={AURA_AAAI_IAAI_2026.pdf},
   selected={true}
 }
 @article{rahman2025ambushai,
