--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -20,7 +20,7 @@
 @article{rahman2025ambushai,
   author={Masry*, Mohamed El and Rahman*, Md Masudur and Gnyawali, Surya C and Smeenge, Thomas  and Xue, Yexiang and C. Hartman, Brett and Spera, Leigh and Wachs, Juan P and Gordillo, Gayle},
   title={Automated Non-Invasive Burn Diagnostic System for Healthcare using Artificial Intelligence: AMBUSH-AI},
-  journal={Annals of Surgery, under minor revision},
+  journal={Annals of Surgery, under revision},
   abbr={Annals of Surgery},
   year={2025},
   note = {Impact Factor = 6.4, *Equal Contribution},
