--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -23,6 +23,7 @@
   journal={Annals of Surgery, under revision},
   abbr={Annals of Surgery},
   year={2025},
+  preview={human_pig_ambushai.png},
   note = {Impact Factor = 6.4, *Equal Contribution},
   selected={true}
 }
@@ -31,7 +32,7 @@
   author       = {Rahman, Md Masudur and Wachs, Juan P. and Xue, Yexiang},
   booktitle    = {Proceedings of the Aligning Reinforcement Learning Experimentalists and Theorists Workshop (ARLET@NeurIPS 2025) at the Thirty-Ninth Annual Conference on Neural Information Processing Systems (NeurIPS 2025)},
   year         = {2025},
-  note         = {Peer-reviewed, non-archival workshop paper},
+  preview={perturb_gaussian.png},
   bibtex_show={true},
   abbr={NeurIPS-25 Workshop},
   selected={true}
@@ -41,7 +42,7 @@
   author       = {Rahman, Md Masudur and Wachs, Juan P.},
   booktitle    = {Proceedings of the Aligning Reinforcement Learning Experimentalists and Theorists Workshop (ARLET@NeurIPS 2025) at the Thirty-Ninth Annual Conference on Neural Information Processing Systems (NeurIPS 2025)},
   year         = {2025},
-  note         = {Peer-reviewed, non-archival workshop paper},
+  preview={fire_water_umbrella.png},
   bibtex_show={true},
   abbr={NeurIPS-25 Workshop},
   selected={true}
@@ -55,7 +56,7 @@
                   GenAI for Health: Potential, Trust, and Policy Compliance (GenAI4Health@NeurIPS 2025), 
                   Embodied World Models for Decision Making (EWM@NeurIPS 2025)},
   year         = {2025},
-  note         = {Peer-reviewed, non-archival workshop paper},
+  preview={implan_overview.png},
   bibtex_show={true},
   abbr={NeurIPS-25 Workshop},
   selected={true}
@@ -68,7 +69,7 @@
                   GenAI for Health: Potential, Trust, and Policy Compliance (GenAI4Health@NeurIPS 2025), 
                   Embodied World Models for Decision Making (EWM@NeurIPS 2025)},
   year         = {2025},
-  note         = {Peer-reviewed, non-archival workshop paper},
+  preview={vlm_reasoning_overview.png},
   bibtex_show={true},
   abbr={NeurIPS-25 Workshop},
   selected={true}
